<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="20px"
        app:cardBackgroundColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="123dp">

            <TextView
                android:id="@+id/textViewKM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:maxWidth="154dp"
                android:text="@string/km"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.476"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewIcon" />

            <TextView
                android:id="@+id/textViewType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:maxWidth="154dp"
                android:text="@string/type"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textViewCity" />

            <TextView
                android:id="@+id/textViewCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/carter_one"
                android:maxWidth="154dp"
                android:text="@string/city"
                android:textAlignment="viewStart"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/date"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageViewIcon"
                android:layout_width="29dp"
                android:layout_height="37dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="false"
                android:tint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.342"
                app:srcCompat="@drawable/ic_directions_car_black_24dp" />

            <View
                android:id="@+id/view"
                android:layout_width="5dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/yellow_line"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintCircleRadius="20dp"
                app:layout_constraintStart_toEndOf="@+id/imageViewIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.344" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>